# ChangeLog for app-crypt/gcr
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/gcr/ChangeLog,v 1.54 2015/04/18 08:24:38 leio Exp $

  18 Apr 2015; Mart Raudsepp <leio@gentoo.org> gcr-3.14.0.ebuild:
  Fix glib version requirement

  05 Apr 2015; Pacho Ramos <pacho@gentoo.org> gcr-3.14.0.ebuild:
  vala-common is needed with eautoreconf (#545222 by brakarov)

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> gcr-3.14.0.ebuild:
  x86 stable, bug 534012

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> gcr-3.14.0.ebuild:
  ppc64 stable, bug 534012

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> gcr-3.14.0.ebuild:
  ppc stable, bug 534012

  14 Mar 2015; Pacho Ramos <pacho@gentoo.org> gcr-3.14.0.ebuild:
  amd64 stable, bug 534012

  02 Mar 2015; Yixun Lan <dlan@gentoo.org> gcr-3.14.0.ebuild:
  add arm64 support, tested on A53 board

  20 Jan 2015; Pacho Ramos <pacho@gentoo.org>
  +files/gcr-3.14.0-race-building.patch, -gcr-3.10.1.ebuild, gcr-3.14.0.ebuild:
  Fix race building gdbus-codegen header and source, drop old

*gcr-3.14.0 (15 Dec 2014)

  15 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org> +gcr-3.14.0.ebuild:
  Version bump for Gnome 3.14.

  11 Oct 2014; Markus Meier <maekke@gentoo.org> gcr-3.12.2.ebuild:
  arm stable, bug #512012

  15 Sep 2014; Agostino Sarubbo <ago@gentoo.org> gcr-3.12.2.ebuild:
  Stable for sparc, wrt bug #512012

  25 Aug 2014; Agostino Sarubbo <ago@gentoo.org> gcr-3.12.2.ebuild:
  Stable for alpha, wrt bug #512012

  23 Aug 2014; Agostino Sarubbo <ago@gentoo.org> gcr-3.12.2.ebuild:
  Stable for ia64, wrt bug #512012

  21 Aug 2014; Agostino Sarubbo <ago@gentoo.org> gcr-3.12.2.ebuild:
  Stable for ppc64, wrt bug #512012

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gcr-3.12.2.ebuild:
  Stable for ppc, wrt bug #512012

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gcr-3.12.2.ebuild:
  Stable for x86, wrt bug #512012
