@@ -1,7 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX gcr-3.14.0-race-building.patch 982 SHA256 ef1d1fc3573c1bdea69e38ae3a8a48d00c1a388cb38a06c78dc61757a850d57d SHA512 5c1d1531cfd936c9068ebb9a287c4ca28af8ee02b20564001379679dddd500492993caff44c7a347d9c9b869ef0b1a2c6f4aeb675adb634f9e2070dde4d006d5 WHIRLPOOL ef9538d676ce274729c3a761305a738dc018d1ea8ad0b6a6af0c0ddbed4277fab131f547ccd98da14305ae93df2ca05fed639bd78a7c00df4ab0400108b51013
 DIST gcr-3.12.2.tar.xz 1331884 SHA256 456e20615ab178aa92eeabdea64dcce535c10d5af189171d9375291a2447d21c SHA512 7c74302a4485e6909e39721b0beeeeb5920d218c4e8ab5a1878be33457f2b6d59df165bf2e6b606efc8275b8e45dffe8d28ac202cf835f7f2483237258a4d6b2 WHIRLPOOL 9655f1997ececce77f1b179f89798b5b9363ea94e0f2024772575ca05d88dd3b15432c1e0d69095b020726bc0fab1df023dfd6cc975488360f90e43fd9069a8c
 DIST gcr-3.14.0.tar.xz 1340764 SHA256 2a2231147a01e2061f57fa9ca77557ff97bc6ceab028cee5528079f4b2fca63d SHA512 2538b2575c0d325587f8b5423ac6f9c522a69b415977398dc5c4330ce1de896c966e541eb6e536e87e81013bb2dedea4d0ae8baabdab9318db5b97e0977671b8 WHIRLPOOL 755842ad30608162bb81ed58a027a26be6d12ecb12e037b826841612c2481ea564f727e2bc4e03f13f8100257b2d2ee3dae213b56b5f04319718ff30c5eee2a9
-EBUILD gcr-3.12.2.ebuild 2044 SHA256 6e75e041167163595dd7ef852c10e04260f7563572d47fb4a4723e80442a85fe SHA512 a4af50a6d674dd2de05c5e98ca3991e388bb219b9a66a70a63145db64f13a1c29118d5b594f82f74993a640b99420dea1b035005af1c4a7774596ceee33dc12e WHIRLPOOL 24871fb99e03c481b07e25dfa5172da19a77f1d48a049173b663854423cd6a3ed78382fbcc3d4bebaf8ba2cb698e68a1beb52106b244d1bfe5bb98a10698fbc4
-EBUILD gcr-3.14.0.ebuild 2214 SHA256 078922e07805c4b39e9a45db4e25f840f4a2b6729b9cceedfc7b08e598d26d54 SHA512 5b826d98f0e18985a049b3a4ed1078ea83c6ed8141f31993d64f21a1ea37309913bf185e90afc692ee5fc7cd5ed70feddee241eed0086721607b61ec27538530 WHIRLPOOL 969ce1701a73a4a29fadf02d94aa33d45d84c94a95641259b47a0757389db492385620cca2f3124b65bcb0e0d49298f3373cec1132a178b04245b35431440ede
-MISC ChangeLog 6757 SHA256 3439c59dc418a0348a54973d7aaddbf871e1e85623a4f2543466930ebee68f42 SHA512 07d6056b5d0d0a329097b96865dbbe3d6ada20f0daaa766c6fa9e52c5ab1af992ed4ced7c8a22b8e2e19563f188fa5f5b6078c6e5c3943ebfde26b79a9274a7b WHIRLPOOL 2cdc9a02b81b21c34fe3f83294635353b2afb46712babb985dc259ffe75185835dd7a9c44d81770d59c9b802cd02b46584d8f8ddb4904a1020835f5c638b242f
+EBUILD gcr-3.12.2.ebuild 2043 SHA256 db6fa8410a9990baa9b12b4efeafc7e6e9137928ef05dbd196580bc699bc810b SHA512 f7a4af1fbe28f411a48dfc7baa5292b518a8ac40a2cc4fc805d67fb95acb313e5b7c523c0d9e19f4b6170321d25b97792e011ed6ae65022b79bdd7aea4ae93a4 WHIRLPOOL 86e86c31f9fd8ed1e63128de90a74a704dd3f1ed94894dfcb50b6778d9e729c110b12e34851e85809d1cfbf5f0cac6a9c1e11b9a2a8042fa184fc957e440e1ed
+EBUILD gcr-3.14.0.ebuild 2216 SHA256 1a4bc03b45d4280e06527126cb27f4052fda4cb8f75d2f4b61daec758ab86731 SHA512 8de269e21fb37128711abfb68248e8a67b60cd3c3c1a31ee081549a14431440860a066f0661f599e1f1563c8efed845ba509c5defe3faf5a3270e93bf2e297de WHIRLPOOL 36a3000efc10a0c8acb7a36ffad99e5b18b3655e2b15e29779bb1eed7329a075104f7cf3c2f5460fa60bdc311e93aad711c523bac299babcc8bb1a2fe2eb0761
+MISC ChangeLog 6907 SHA256 f027f7236cd9f9e5f471ee5e0d44799333854847b96e78e47e4b8b3d0f29cdf4 SHA512 2539fcf13154267e22a4718ba49bd888f95e10430b63b852894fbf2babbb770cb6b21e7cf1bc8610fae90c1a5178320391ea197dbd5e6a0327b5855c0ccfca3f WHIRLPOOL 7dd2ff262d879bbd90e68a2ad9d68cc1de2c8547f844c4a69ffb7f27effeb322de9f651bd5c8ab6b08eee06e2e663142ee7fa3143fa90d1ba411040eaace7765
 MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlVDfIkACgkQ1fmVwcYIWAZyygCfSIQJayJ/bDXZVbZL8LYd72Hv
+TxAAn1G1AQzO/BtiFNRGEsT06povojkX
+=ckRN
+-----END PGP SIGNATURE-----
