@@ -1,0 +1,26 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/ExtUtils-Depends/ExtUtils-Depends-0.404.0.ebuild,v 1.1 2015/05/01 13:01:19 dilfridge Exp $
+
+EAPI=5
+
+MODULE_AUTHOR=XAOC
+MODULE_VERSION=0.404
+inherit perl-module
+
+DESCRIPTION="Easily build XS extensions that depend on XS extensions"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~x86-solaris"
+IUSE=""
+
+RDEPEND="
+	virtual/perl-Data-Dumper
+	virtual/perl-File-Spec
+	virtual/perl-IO
+"
+DEPEND="${RDEPEND}
+	virtual/perl-ExtUtils-MakeMaker
+"
+
+SRC_TEST="do parallel"
