@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=dev-lang/perl:=[-build(-)]
+DEPEND=virtual/perl-Data-Dumper virtual/perl-File-Spec virtual/perl-IO virtual/perl-ExtUtils-MakeMaker dev-lang/perl:=[-build(-)]
 DESCRIPTION=Easily build XS extensions that depend on XS extensions
 EAPI=5
 HOMEPAGE=http://search.cpan.org/dist/ExtUtils-Depends/
-KEYWORDS=alpha amd64 arm hppa ia64 ~mips ppc ppc64 ~s390 ~sh sparc x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~x86-solaris
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~x86-solaris
 LICENSE=|| ( Artistic GPL-1+ )
-RDEPEND=dev-lang/perl:=[-build(-)]
+RDEPEND=virtual/perl-Data-Dumper virtual/perl-File-Spec virtual/perl-IO dev-lang/perl:=[-build(-)]
 SLOT=0
-SRC_URI=mirror://cpan/authors/id/X/XA/XAOC/ExtUtils-Depends-0.306.tar.gz
+SRC_URI=mirror://cpan/authors/id/X/XA/XAOC/ExtUtils-Depends-0.404.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	7a1c6bac46bba968758a2f7666af645b	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=2a3dc783e6969deb2183d347d1acb7ce
+_md5_=9ddb7665c09ec3bcf10b4541c113c443
