@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/ExtUtils-Depends
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/ExtUtils-Depends/ChangeLog,v 1.1 2015/05/01 11:43:29 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/ExtUtils-Depends/ChangeLog,v 1.2 2015/05/01 13:01:19 dilfridge Exp $
+
+*ExtUtils-Depends-0.404.0 (01 May 2015)
+
+  01 May 2015; Andreas K. Huettel <dilfridge@gentoo.org>
+  -ExtUtils-Depends-0.306.0.ebuild, +ExtUtils-Depends-0.404.0.ebuild:
+  Version bump; remove old
 
 *ExtUtils-Depends-0.403.0 (01 May 2015)
 *ExtUtils-Depends-0.308.0 (01 May 2015)
